--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,5 @@
     <string name="user_profile_pic_description">User Profile Image</string>
     <string name="logout_button_text">Logout</string>
     <string name="action_user_info">User Info</string>
-    <string name="pin_dialog_edit_text_hint">Enter Pin</string>
+    <string name="pin_dialog_edit_text_hint">       </string>
 </resources>
